# intro_to_github

./: LICENSE  README.md  connecting_rstudio_github.nb.html  pyproject.toml
my_python_repository/: newton_raphson.py
python_instructions/: python_instructions.md
r_instructions/: configuring_git_rstudio.Rmd  configuring_git_rstudio.md  connecting_rstudio_github.Rmd  connecting_rstudio_github.md  worksheet_2.html
